Version 0.1.3

* Delete references to old animations so they can be garbage collected.

2010.06.21, Version 0.1.2

* Make absolute transformations the default.
* Add separate relative animation functions with R-postfixed names.
* Store a separate reference to the next callback to be fired.

2010.06.09, Version 0.1.1

* Add callbacks to animation methods.
* Use vectors instead of point objects to represent points and transformations
  internally, but continue to allow point objects to be used at the API level.
* Better inline documentation for core objects and functions.
* Rename Firmin.CTM to Firmin.TransformMatrix.
* Remove unused accessor method for elements of Firmin.TransformMatrix.

2010.06.01, Version 0.1.0

* Initial release. Features chained animations using CSS transitions and
  transforms. Currently for WebKit browsers only.