@@ -1,6 +1,7 @@
 Version 0.1.3
 
 * Delete references to old animations so they can be garbage collected.
+* Add a set of regression tests for transforms.
 
 2010.06.21, Version 0.1.2
 
